# oz_coding

./: .gitignore  fish_braed.py
DB(SQL)/: data_generate.py
DB(SQL)/1일차/: chapter01_06.ipynb
DB(SQL)/2일차/: database_day2.ipynb  db_cahl_1.sql
Git&GitHub/: oz_back.yaml  oz_front.yaml
Git&GitHub/1일차/: .gitignore
Linux/1일차/: linux_0113(문제).ipynb
Linux/2일차/: linux_1426.ipynb
html_chal/: day1-2.html  day2.html  day3.html
html_chal/BOOT/: index.html
oz-backend-django/: README.md  db.sqlite3  pyproject.toml
oz-backend-django/boards/: models.py
oz-backend-django/boards/migrations/: 0001_initial.py
oz-backend-django/config/: settings.py  urls.py
oz-backend-django/feeds/: views.py
oz-backend-django/users/: models.py
oz-backend-django/users/migrations/: 0001_initial.py
python/1일차/chapter1_py/: S_Ch01.task.ipynb
python/1일차/chapter4_py/: Ch04_task.ipynb
python/1일차/도장깨기/: level3.ipynb
python/2일차/필수과제/: Chapter0508_과제.ipynb
python/3일차/필수과제/: Chaper0913_task.ipynb
python/Live/: day_1.py  day_2.py
python_chal/1일차/chapter3_py/: S_Ch03_task.ipynb
python_chal/1일차/도장깨기/: level1.ipynb  level2.ipynb  test.py
python_chal/1일차/필수과제/: Ch04_task(code).ipynb
python_chal/2일차/: level1.ipynb  level2.ipynb  level3.ipynb
python_chal/2일차/필수과제/: Chapter0508_과제.ipynb
python_chal/3일차/필수과제/: Chaper0913_task.ipynb
python_chal/4일차/필수과제/: Chaper1416_task.ipynb
python_chal/5일차/: Chapter1720_task.ipynb
python_chal/6일차/: Ch21_task.ipynb  Ch22_task.ipynb  Ch23_task.ipynb  Ch24_task.ipynb  Ch25_task.ipynb  Ch26_task.ipynb
python_chal/Live/: day_3.py
(+1 files in other folders)
